Fix relative heights and allow corrected line height
This is useful for characters like bucklolo, who's image will be taller than their actual height. Their image and line will be stretched to scale appropriately.

--- a/frog-lineup-app/src/app/art-lineup/art-lineup.component.scss
+++ b/frog-lineup-app/src/app/art-lineup/art-lineup.component.scss
@@ -1,8 +1,12 @@
+$lineup-width: 200vw;
+
 .lineup {
-  display: flex;
-  align-items: baseline;
-  width:300vw;
-  width:300vw;
+  display: grid;
+  grid-auto-flow: column;
+  grid-auto-rows: 1fr;
+  align-items: end;
+  // width: $lineup-width;
+  width: 400vw;
 }
 
 .img-container {
@@ -10,32 +14,45 @@
   // min-height: 100px;
   // width: 100%;
   // height: 100%;
+  display:flex;
+  // flex-flow: column;
   cursor: pointer;
-  transition: all .5s ease-in;
+  transition: all .3s ease-out;
+  overflow: visible;
 }
 
 .line {
+  position: relative;
   z-index: 1;
   height: 2px;
-  width: 600vw;
-  margin-left: -300vw;
-  position: absolute;
+  // width: $lineup-width * 2;
+  width: 100px;
+  // margin-left: -300vw;
   opacity:40%;
+  transition: all .3s ease-out;
+}
+
+.line-container {
+  flex-basis: 0;
+  flex-shrink: 0;
+  overflow: visible;
+  width: 0;
 }
 
 .not-hovered {
   opacity: 20%;
-  transition: all .5s ease-out;
+  transition: all .3s ease-out;
 }
 
 .image {
   position:relative;
   z-index: 2;
   max-width:100%;
-  max-height:100%;
+  // left: -100%;
 }
 
 .focus-line {
   opacity: 100%;
+  transition: all .3s ease-out;
   // background-color: red !important;
 }
